--- a/CoPMeetingMins/Sept2019.md
+++ b/CoPMeetingMins/Sept2019.md
@@ -1,4 +1,4 @@
-### Meeting minutes - 9/19/19
+## Meeting minutes - 9/19/19
 
 * Welcome: Discussion of the new format - based on feedback
     - Changed to monthly community of practice for all to participate
