--- a/docs/CoPMeetingMins/Nov2019.md
+++ b/docs/CoPMeetingMins/Nov2019.md
@@ -63,5 +63,5 @@
 * Kudos
     - DOE - growing inventory and placing new one on Code.gov
     - NASA - Justin Gosses - [calculating labor hours](https://observablehq.com/@justingosses/finding-labor-hours-to-generate-opensouce-nasa-code-since-a)
-    - Sara Cope spoke at GitHub Universe
+    - Sara Cope spoke at GitHub Universe on [Shaping the Contributor Experience](https://github.com/saracope/shaping-the-contributor-experience)
     - Karen Trebon spoke at RedHat event in DC - peaked interest in Open Tasks
