adding liaison list and updating Nov meeting mins

--- a/docs/CoPMeetingMins/Nov2019.md
+++ b/docs/CoPMeetingMins/Nov2019.md
@@ -2,7 +2,7 @@
 
 **IOUs from Code.gov - collected at the meeting**
 1. There was a *request for a Slack channel* for communication among the CoP outside the listserv. We use 18F Slack (really TTS now) and our channel is #code-gov-partners. Anyone with a .gov and .mil can join. Send a message to Amin Mehr (amin.mehr@gsa.gov) requesting to be added to the channel.
-2. Peter Meyer's email. In order to not blast Peter's email, again please send a message to Amin.
+2. Peter Meyer's email (<Meyer.Peter@bls.gov>) for those interested in participating in the Software Productivity and Quality Working Group.
 3. Agency liaison list will be sent to the listserv with a link to these notes.
 
 <hr>
@@ -42,7 +42,7 @@
     - Upcoming Blogs: A.I. Guidelines, Code.gov/21st Century IDEA
     - Upcoming Social Media: Cyber Monday (12/2), National Cookie Day (12/4), Hour of Code (12/9)
     - Follow Us on [Twitter](https://twitter.com/CodeDotGov), [Linkedin](https://www.linkedin.com/company/code-gov/), [Medium](https://medium.com/codedotgov)
-    
+
 #### Current engagements
 - FSCS - Federal Source Code Study
     - Wrapping up data analysis and validating, finalizing draft for publication.
