--- a/docs/CoPMeetingMins/Nov2019.md
+++ b/docs/CoPMeetingMins/Nov2019.md
@@ -3,7 +3,7 @@
 **IOUs from Code.gov - collected at the meeting**
 1. There was a *request for a Slack channel* for communication among the CoP outside the listserv. We use 18F Slack (really TTS now) and our channel is #code-gov-partners. Anyone with a .gov and .mil can join. Send a message to Amin Mehr (amin.mehr@gsa.gov) requesting to be added to the channel.
 2. Peter Meyer's email (<Meyer.Peter@bls.gov>) for those interested in participating in the Software Productivity and Quality Working Group.
-3. Agency liaison list will be sent to the listserv with a link to these notes.
+3. Agency liaison [list](SupportingDocs/agency_liaisons.md) will be sent to the listserv with a link to these notes.
 
 <hr>
 
