--- a/docs/CoPMeetingMins/Jan2020.md
+++ b/docs/CoPMeetingMins/Jan2020.md
@@ -18,12 +18,12 @@
 
 #### Updates to Code.gov
 - Updates to platform
-    - A new front-end release went out Nov. 19 ([release notes](https://github.com/GSA/code-gov-front-end/releases/tag/v1.1.2)). Updates include:
+    - A new front-end release went out Dec. 11 ([release notes](https://github.com/GSA/code-gov-front-end/releases/tag/v1.1.2)). Updates include:
     - Update to site with USWDS
     - Various component and vulnerability updates
 - Metadata schema meeting
     - Scheduled for 1/22 at 2pm
-    - Send email to Joe or Amin if you would like to participate
+    - Send email to Joe (joseph.castle@gsa.gov) or Amin (amin.mehr@gsa.gov) if you would like to participate
 
 #### Current news
 - Updates by Nicole Williams, Code.gov’s Comms Chief
@@ -36,7 +36,7 @@
 - Software Productivity and Quality Working Group
     - Includes BLS, NASA, NIST, DOD, GSA
     - Monthly calls with demos, super geeky conversations on code value and quality.
-    - Speak with Peter Meyer at BLS if interested in joining.
+    - Speak with Peter Meyer (Meyer.Peter@bls.gov) at BLS if interested in joining.
 - Federal Source Code Toolkit
     - Planned for Spring w/ release at the Spring Federal Source Code Summit
     - Establish workgroup
@@ -51,7 +51,7 @@
 #### Kudos
 - DOT and DOD - working to clean up code.json files for publication on Code.gov
 - SSA - Code Documentation Day 2020 - Thursday, 1/23, at SSA. Contact Joe Amalfitano (joseph.amalfitano@ssa.gov)
-- Nikki Williams, Code.gov Comms Chief - completing and sending out Federal Source Code Summit survey, publishing Code of Conduct [blog](https://medium.com/codedotgov/new-decade-new-code-gov-code-of-conduct-d8402a79a34b)
+- Nikki Williams, Code.gov Comms Chief - completing and sending out Federal Source Code Summit survey, publishing [Code of Conduct blog](https://medium.com/codedotgov/new-decade-new-code-gov-code-of-conduct-d8402a79a34b)
 
 #### Third Thursday Happy Hour
 - Post Pub, at 15th and L NW
