--- a/docs/CoPMeetingMins/Jan2020.md
+++ b/docs/CoPMeetingMins/Jan2020.md
@@ -27,7 +27,14 @@
 
 #### Current news
 - Updates by Nicole Williams, Code.gov’s Comms Chief
-- TBD
+- Federal Source Code Conference April 16, 2020 @ GSA 18F! - Take Our [Federal Source Conference Survey](https://feedback.gsa.gov/jfe/form/SV_8kmMZWIIfNocN9z)!
+- ICYMI:
+    - [How I replicated an $86 million project in 57 lines of code](https://read.acloud.guru/how-i-replicated-an-86-million-project-in-57-lines-of-code-277031330ee9)
+    - [The rise of open-source software](https://www.cnbc.com/video/2019/12/14/how-open-source-software-became-the-new-industry-standard.html)
+    - [The 10 Hottest New Open-Source Technologies And Tools of 2019](https://www.crn.com/slide-shows/applications-os/the-10-hottest-new-open-source-technologies-and-tools-of-2019)
+- Upcoming Blogs: Community Building in Open Source, Diversity In Code (Black History Month), Women in Code (Women’s History) ***NOTE: For those wishing to contribute to these blogs please contact me on Slack @NicoleYvonneWilliams or at Nicole.Williams@gsa.gov***
+- Upcoming Social Media: MLK Day of Service (1/20), Chinese New Year (1/25), National Lego Day (1/28), National Puzzle Day (1/29), Mentoring Month (All January)
+- Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov)
 
 #### Current engagements
 - FSCS - Federal Source Code Study
