updated Jan agenda to meeting minutes

--- a/docs/CoPMeetingMins/Jan2020.md
+++ b/docs/CoPMeetingMins/Jan2020.md
@@ -1,42 +1,44 @@
-## Agenda - 1/16/2020
+# Meeting Minutes - 1/16/2020
 
-#### Welcome
+## Welcome
 - Thank you for joining today!
 - Purpose: This is a forum to learn from each other, not about compliance but about realizing the benefits of engaging with the public and releasing software.
-- Programming note - next meeting is February 20th
+- Programming note - next meeting is February 20th. 
+    - Meeting info. sent through Code.gov listserv.
+    - Sign up for CODE listserv - CODE-subscribe-request@listserv.gsa.gov. Leave the subject and body blank.
 
-#### IOUs from Code.gov - collected at the meeting in December
+## IOUs from Code.gov - collected at the meeting in December
 1. There was a *request for a Slack channel* for communication among the CoP outside the listserv. We use 18F Slack (really TTS now) and our channel is #code-gov-partners. Anyone with a .gov and .mil can join. Send a message to Amin Mehr (amin.mehr@gsa.gov) requesting to be added to the channel.
 2. Peter Meyer's email (Meyer.Peter@bls.gov) for those interested in participating in the Software Productivity and Quality Working Group.
 3. As requested, here is the [agency liaison list](SupportingDocs/agency_liaisons.md). Please keep me (joseph.castle@gsa.gov) and Amin (amin.mehr@gsa.gov) updated on required changes (a PR works too!).
 
-#### OMB update on FSCP
-- Policy (M-16-21) continues - agencies have to create policy, update acquisition language to capture new custom code, and inventory code and post inventory on root directory
-- 20% pilot expired in August but OMB will extend pilot indefinitely in new Automated Tech Policy 
-    - Asking agencies to email OMB about new policy - Rebecca Williams (rebecca.a.williams@omb.eop.gov)
-- Completing quarterly agency phone calls - slightly more than 1/2 way finished
+## OMB update on FSCP
+- Policy (M-16-21) continues - agencies have to create policy, update acquisition language to capture new custom code, and inventory code and post inventory on root directory.
+- 20% pilot expired in August 2019 but OMB will extend pilot indefinitely in new Automated Tech Policy. 
+    - Asking agencies to email OMB about new policy - Rebecca Williams (rebecca.a.williams@omb.eop.gov).
+- Completing quarterly agency phone calls - slightly more than 1/2 way finished.
 
-#### Updates to Code.gov
+## Updates to Code.gov
 - Updates to platform
     - A new front-end release went out Dec. 11 ([release notes](https://github.com/GSA/code-gov-front-end/releases/tag/v1.1.2)). Updates include:
-    - Update to site with USWDS
-    - Various component and vulnerability updates
+    - Update to site with USWDS.
+    - Various component and vulnerability updates.
 - Metadata schema meeting
-    - Scheduled for 1/22 at 2pm
-    - Send email to Joe (joseph.castle@gsa.gov) or Amin (amin.mehr@gsa.gov) if you would like to participate
+    - Scheduled for 1/22 at 2pm.
+    - Send email to Joe (joseph.castle@gsa.gov) or Amin (amin.mehr@gsa.gov) if you would like to participate.
 
-#### Current news
-- Updates by Nicole Williams, Code.gov’s Comms Chief
+## Current news
+- Updates by Nicole Williams, Code.gov’s Comms Chief.
 - Federal Source Code Conference April 16, 2020 @ GSA 18F! - Take Our [Federal Source Conference Survey](https://feedback.gsa.gov/jfe/form/SV_8kmMZWIIfNocN9z)!
 - ICYMI:
     - [How I replicated an $86 million project in 57 lines of code](https://read.acloud.guru/how-i-replicated-an-86-million-project-in-57-lines-of-code-277031330ee9)
     - [The rise of open-source software](https://www.cnbc.com/video/2019/12/14/how-open-source-software-became-the-new-industry-standard.html)
     - [The 10 Hottest New Open-Source Technologies And Tools of 2019](https://www.crn.com/slide-shows/applications-os/the-10-hottest-new-open-source-technologies-and-tools-of-2019)
-- Upcoming Blogs: Community Building in Open Source, Diversity In Code (Black History Month), Women in Code (Women’s History) ***NOTE: For those wishing to contribute to these blogs please contact me on Slack @NicoleYvonneWilliams or at Nicole.Williams@gsa.gov***
+- Upcoming Blogs: Community Building in Open Source, Diversity In Code (Black History Month), Women in Code (Women’s History) ***NOTE: For those wishing to contribute to these blogs please contact me on Slack @NicoleYvonneWilliams or at Nicole.Williams@gsa.gov***.
 - Upcoming Social Media: MLK Day of Service (1/20), Chinese New Year (1/25), National Lego Day (1/28), National Puzzle Day (1/29), Mentoring Month (All January)
-- Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov)
+- Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov).
 
-#### Current engagements
+## Current engagements
 - FSCS - Federal Source Code Study
     - Wrapping up data analysis and validating, finalizing draft for publication.
     - Release planned for March.
@@ -45,22 +47,17 @@
     - Monthly calls with demos, super geeky conversations on code value and quality.
     - Speak with Peter Meyer (Meyer.Peter@bls.gov) at BLS if interested in joining.
 - Federal Source Code Toolkit
-    - Planned for Spring w/ release at the Spring Federal Source Code Summit
-    - Establish workgroup
+    - Planned for Spring w/ release at the Spring Federal Source Code Summit.
+    - Establish workgroup.
 - Harvard code valuation project
     - Planned for Spring.
     - Exploratory research to value software - value to agency, public, cost, reuse, etc.
     - Ask for help from this community for interviews and artifacts, SMEs on code creation and reuse.
 
-#### Events
+## Events
 - Spring Federal Source Code Summit - For Feds by Feds, hosted at GSA w/ virtual component, 1/2 day in the morning, April 16th, 2020. - Topics based on FSCS study and input from this community - looking for ideas and speakers.
 
-#### Kudos
-- DOT and DOD - working to clean up code.json files for publication on Code.gov
-- SSA - Code Documentation Day 2020 - Thursday, 1/23, at SSA. Contact Joe Amalfitano (joseph.amalfitano@ssa.gov)
-- Nikki Williams, Code.gov Comms Chief - completing and sending out Federal Source Code Summit survey, publishing [Code of Conduct blog](https://medium.com/codedotgov/new-decade-new-code-gov-code-of-conduct-d8402a79a34b)
-
-#### Third Thursday Happy Hour
-- Post Pub, at 15th and L NW
-- Starting at 6pm
-- All are welcome to join!
+## Kudos
+- DOT and DOD - working to clean up code.json files for publication on Code.gov.
+- SSA - Code Documentation Day 2020 - Thursday, 1/23, at SSA. Contact Joe Amalfitano (joseph.amalfitano@ssa.gov).
+- Nikki Williams, Code.gov Comms Chief - completing and sending out Federal Source Code Summit survey, publishing [Code of Conduct blog](https://medium.com/codedotgov/new-decade-new-code-gov-code-of-conduct-d8402a79a34b).
