added Ian's thread w/ link

--- a/docs/MetadataSchema/Jan2020.md
+++ b/docs/MetadataSchema/Jan2020.md
@@ -11,6 +11,7 @@
 - Each code repository contains a json file with metadata that shares the Metadata Schema 2.0 format.
 - The json file has a consistent name and in root directory for discoverability by the scraper.
 - Need more discussion about including metadata in the file but not in the 2.0 Schema. Including how to parse out private data. (Would you want this in the repo in the first place?)
+- Ian began a [thread](https://github.com/LLNL/scraper/issues/45#issuecomment-577372871) in the Scraper repo on GitHub.
 
 ## Discussion pertaining to question #2
 
