--- a/docs/CoPMeetingMins/Feb2020.md
+++ b/docs/CoPMeetingMins/Feb2020.md
@@ -29,13 +29,11 @@
 
 ## Current news
 - Updates by Nicole Williams, Code.gov’s Comms Chief.
-- Federal Source Code Conference April 16, 2020 @ GSA 18F! - Take Our [Federal Source Conference Survey](https://feedback.gsa.gov/jfe/form/SV_8kmMZWIIfNocN9z)!
+- Federal Source Code Conference April 16, 2020 @ GSA in DC and virtual!
 - ICYMI:
-    - [How I replicated an $86 million project in 57 lines of code](https://read.acloud.guru/how-i-replicated-an-86-million-project-in-57-lines-of-code-277031330ee9)
-    - [The rise of open-source software](https://www.cnbc.com/video/2019/12/14/how-open-source-software-became-the-new-industry-standard.html)
-    - [The 10 Hottest New Open-Source Technologies And Tools of 2019](https://www.crn.com/slide-shows/applications-os/the-10-hottest-new-open-source-technologies-and-tools-of-2019)
+    - [Crowdsourcing for Code Webinar](https://digital.gov/event/2020/02/11/federal-crowdsourcing-webinar-series-episode-7/).
 - Upcoming Blogs: Community Building in Open Source, Diversity In Code (Black History Month), Women in Code (Women’s History) ***NOTE: For those wishing to contribute to these blogs please contact me on Slack @NicoleYvonneWilliams or at Nicole.Williams@gsa.gov***.
-- Upcoming Social Media: MLK Day of Service (1/20), Chinese New Year (1/25), National Lego Day (1/28), National Puzzle Day (1/29), Mentoring Month (All January)
+- Upcoming Social Media: Mardi Gras, Women’s History Month, March Madness, Pi Day
 - Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov).
 
 ## Current engagements
