--- a/docs/CoPMeetingMins/Feb2020.md
+++ b/docs/CoPMeetingMins/Feb2020.md
@@ -40,9 +40,9 @@
 - FSCS - Federal Source Code Study
     - Finished project, making some minor tweaks.
     - Release planned for April, shortly after 4/9.
-- Software Productivity and Quality Working Group
+- Software Productivity and Quality Working Group (SPSQ) coordinated by OSTP/NITRD
     - Includes BLS, NASA, NIST, DOD, GSA
-    - Monthly calls with demos, super geeky conversations on code value and quality.
+    - Monthly calls with presentations on software engineering research and some relation to economics of software
     - Speak with Peter Meyer (Meyer.Peter@bls.gov) at BLS if interested in joining.
 - Federal Source Code Toolkit
     - Planned for Spring w/ release at the Spring Federal Source Code Summit.
