adding Mar2020 agenda

--- a/docs/CoPMeetingMins/Mar2020.md
+++ b/docs/CoPMeetingMins/Mar2020.md
@@ -20,12 +20,9 @@
 ## Updates to Code.gov
 - Updates to platform
     - Updating front-end to USWDS. About 80% finished.
+    - Updating Federalist deployment scripts.
     - Various component and vulnerability updates.
     - Helpful resource - Snyk/Forrester webinar - [ROI of Open Source Security](https://www.youtube.com/watch?v=FwFlwiqOodg&t=2736s).
-- Metadata schema meeting
-    - Held meeting on 1/22.
-    - Posted [meeting minutes](https://github.com/GSA/code-gov/blob/master/docs/MetadataSchema/Jan2020.md) on GitHub.
-    - Send email to Joe (joseph.castle@gsa.gov) or Amin (amin.mehr@gsa.gov) if you would like to participate.
 
 ## Current news
 - Updates by Nicole Williams, Code.gov’s Comms Chief.
