updating Mar2020 agenda

--- a/docs/CoPMeetingMins/Mar2020.md
+++ b/docs/CoPMeetingMins/Mar2020.md
@@ -46,8 +46,7 @@
     - Looking for feedback on current [MD files](https://github.com/GSA/code-gov-open-source-toolkit).
 
 ## Events
-- Spring Federal Source Code Summit - For Feds by Feds, hosted at GSA w/ virtual component, 1/2 day in the morning, April 16th, 2020. - Topics based on FSCS study and input from this community - looking for ideas and speakers.
-- **Postponed until further notice**
+- **Postponed until further notice** - Spring Federal Source Code Summit - For Feds by Feds, hosted at GSA w/ virtual component, 1/2 day in the morning, April 16th, 2020. - Topics based on FSCS study and input from this community - looking for ideas and speakers.
 
 ## Kudos
 - SSA & GSA - blog post for SSA documentation hackathon coming soon.
