--- a/docs/CoPMeetingMins/Mar2020.md
+++ b/docs/CoPMeetingMins/Mar2020.md
@@ -16,6 +16,7 @@
 - Policy (M-16-21) continues - agencies have to create policy, update acquisition language to capture new custom code, and inventory code and post inventory on root directory.
 - 20% pilot expired in August 2019 but OMB will extend pilot indefinitely in new Automated Tech Policy. 
     - Asking agencies to email OMB about new policy - Rebecca Williams (rebecca.a.williams@omb.eop.gov).
+- IDC Update - OMB is no longer requiring agencies to complete the IDC report, but the Code.gov team will continue to work with agencies to ensure that their metrics are being tracked on the compliance dashboard.
 
 ## Updates to Code.gov
 - Updates to platform
@@ -29,8 +30,8 @@
 - Federal Source Code Conference April 16, 2020 @ GSA in DC and virtual!
 - ICYMI:
     - [Crowdsourcing for Code Webinar](https://digital.gov/event/2020/02/11/federal-crowdsourcing-webinar-series-episode-7/).
-- Upcoming Blogs: Community Building in Open Source, Diversity In Code (Black History Month), Women in Code (Women’s History) ***NOTE: For those wishing to contribute to these blogs please contact me on Slack @NicoleYvonneWilliams or at Nicole.Williams@gsa.gov***.
-- Upcoming Social Media: Mardi Gras, Women’s History Month, March Madness, Pi Day
+- Upcoming Blogs: ***NOTE: For those wishing to contribute to these blogs please contact me on Slack @NicoleYvonneWilliams or at Nicole.Williams@gsa.gov***.
+- Upcoming Social Media: 
 - Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov).
 
 ## Current engagements
