--- a/docs/CoPMeetingMins/Mar2020.md
+++ b/docs/CoPMeetingMins/Mar2020.md
@@ -26,23 +26,19 @@
 
 ## Current news
 - Updates by Nicole Williams, Code.gov’s Comms Chief.
-- Federal Source Code Conference April 16, 2020 @ GSA in DC and virtual!
-- ICYMI:
-    - [Crowdsourcing for Code Webinar](https://digital.gov/event/2020/02/11/federal-crowdsourcing-webinar-series-episode-7/).
-- Upcoming Blogs: Community Building in Open Source, Diversity In Code (Black History Month), Women in Code (Women’s History) ***NOTE: For those wishing to contribute to these blogs please contact me on Slack @NicoleYvonneWilliams or at Nicole.Williams@gsa.gov***.
-- Upcoming Social Media: Mardi Gras, Women’s History Month, March Madness, Pi Day
+   - Federal Source Code Conference April 16, 2020 POSTPONED!
+   - Upcoming Blogs: SSA Hackathon, Success Stories in Open Source in Government
 - Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov).
 
 ## Current engagements
 - FSCS - Federal Source Code Study
-    - Finished project, making some minor tweaks.
+    - Finished project
     - Release planned for April, shortly after 4/9.
 - Software Productivity and Quality Working Group
     - Includes BLS, NASA, NIST, DOD, GSA
     - Monthly calls with demos, super geeky conversations on code value and quality.
     - Speak with Peter Meyer (Meyer.Peter@bls.gov) at BLS if interested in joining.
 - Federal Source Code Toolkit
-    - Planned for Spring w/ release at the Spring Federal Source Code Summit.
     - Looking for feedback on current [MD files](https://github.com/GSA/code-gov-open-source-toolkit).
 
 ## Events
