--- a/docs/CoPMeetingMins/Mar2020.md
+++ b/docs/CoPMeetingMins/Mar2020.md
@@ -19,7 +19,7 @@
 - IDC Update - OMB is no longer requiring agencies to complete the IDC report, but the Code.gov team will continue to work with agencies to ensure that their metrics are being tracked on the compliance dashboard.
 
 ## Updates to Code.gov
-- Updates to platform
+- Updates to platform by Sean Starnes, Code.gov's Backend Developer.
     - Updating front-end to USWDS. About 80% finished.
     - Updating Federalist deployment scripts.
     - Various component and vulnerability updates.
@@ -50,3 +50,4 @@
 
 ## Kudos
 - SSA & GSA - blog post for SSA documentation hackathon coming soon.
+- FDIC for hosting Code.gov to talk about open source and policy development.
