--- a/docs/CoPMeetingMins/Mar2020.md
+++ b/docs/CoPMeetingMins/Mar2020.md
@@ -31,7 +31,7 @@
    - Upcoming Blogs: SSA Hackathon, Success Stories in Open Source in Government
 - ICYMI:
     - [Crowdsourcing for Code Webinar](https://digital.gov/event/2020/02/11/federal-crowdsourcing-webinar-series-episode-7/).
-- Upcoming Social Media: 
+- Upcoming Social Media: Announcements regarding Summit being postponed.
 - Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov).
 
 ## Current engagements
