--- a/docs/CoPMeetingMins/Mar2020.md
+++ b/docs/CoPMeetingMins/Mar2020.md
@@ -49,5 +49,5 @@
 - **Postponed until further notice** - Spring Federal Source Code Summit - For Feds by Feds, hosted at GSA w/ virtual component, 1/2 day in the morning, April 16th, 2020. - Topics based on FSCS study and input from this community - looking for ideas and speakers.
 
 ## Kudos
-- SSA & GSA - blog post for SSA documentation hackathon available now!
+- SSA & GSA - blog post for SSA documentation hackathon [available now](https://medium.com/codedotgov/a-hacking-good-time-with-the-social-security-administration-and-code-gov-78a323f3f117)!
 - FDIC for hosting Code.gov to talk about open source and policy development.
