--- a/docs/CoPMeetingMins/Mar2020.md
+++ b/docs/CoPMeetingMins/Mar2020.md
@@ -46,7 +46,7 @@
     - Looking for feedback on current [MD files](https://github.com/GSA/code-gov-open-source-toolkit).
 
 ## Events
-- **Postponed until further notice** - Spring Federal Source Code Summit - For Feds by Feds, hosted at GSA w/ virtual component, 1/2 day in the morning, April 16th, 2020. - Topics based on FSCS study and input from this community - looking for ideas and speakers.
+- **Postponed until further notice** - Spring Federal Source Code Summit - For Feds by Feds, hosted at GSA w/ virtual component, 1/2 day in the morning, April 16th, 2020. - Topics based on FSCS study and input from this community - looking for ideas and speakers. [Read more here](https://medium.com/codedotgov/postponed-2020-federal-source-code-summit-e901114170c6)
 
 ## Kudos
 - SSA & GSA - blog post for SSA documentation hackathon [available now](https://medium.com/codedotgov/a-hacking-good-time-with-the-social-security-administration-and-code-gov-78a323f3f117)!
