--- a/docs/CoPMeetingMins/Mar2020.md
+++ b/docs/CoPMeetingMins/Mar2020.md
@@ -1,36 +1,33 @@
-# Agenda - 3/19/2020
+# Meeting Minutes - 3/19/2020
 
 ## Welcome
 - Thank you for joining today!
-- Purpose: This is a forum to learn from each other, not about compliance but about realizing the benefits of engaging with the public and releasing software.
-- Programming note - next meeting is April 16th (Always 3rd Thursday of the month.). 
+- Purpose: This is a forum to learn from each other to realize the benefits of sharing and open sourcing software.
+
+## Programming Notes
+1. Next meeting is April 16th (Always 3rd Thursday of the month.). 
     - Meeting info. sent through Code.gov listserv.
     - Sign up for CODE listserv - CODE-subscribe-request@listserv.gsa.gov. Leave the subject and body blank.
-
-## IOUs from Code.gov
-1. There was a *request for a Slack channel* for communication among the CoP outside the listserv. We use 18F Slack (really TTS now) and our channel is #code-gov-partners. Anyone with a .gov and .mil can join. Send a message to Amin Mehr (amin.mehr@gsa.gov) requesting to be added to the channel.
-2. Peter Meyer's email (Meyer.Peter@bls.gov) for those interested in participating in the Software Productivity and Quality Working Group.
-3. As requested, here is the [agency liaison list](SupportingDocs/agency_liaisons.md). Please keep me (joseph.castle@gsa.gov) and Amin (amin.mehr@gsa.gov) updated on required changes (a PR works too!).
+2. We have a *Slack channel* for communication among the CoP outside the listserv. Located in TTS Slack and our channel is #code-gov-partners. Anyone with a .gov and .mil email address can join. Send a message to Amin Mehr (amin.mehr@gsa.gov) requesting to be added to the channel.
+3. We try to keep our [agency liaison list](SupportingDocs/agency_liaisons.md) updated. Please let us know of changes to agency policy PoCs.
 
 ## OMB update on FSCP
 - Policy (M-16-21) continues - agencies have to create policy, update acquisition language to capture new custom code, and inventory code and post inventory on root directory.
-- 20% pilot expired in August 2019 but OMB will extend pilot indefinitely in new Automated Tech Policy. 
-    - Asking agencies to email OMB about new policy - Rebecca Williams (rebecca.a.williams@omb.eop.gov).
+- 20% pilot expired in August 2019 and working with OMB on ways to extend the program. 
 - IDC Update - OMB is no longer requiring agencies to complete the IDC report, but the Code.gov team will continue to work with agencies to ensure that their metrics are being tracked on the compliance dashboard.
 
 ## Updates to Code.gov
-- Updates to platform by Sean Starnes, Code.gov's Backend Developer.
-    - Updating front-end to USWDS. About 80% finished.
-    - Updating Federalist deployment scripts.
-    - Various component and vulnerability updates.
-    - Helpful resource - Snyk/Forrester webinar - [ROI of Open Source Security](https://www.youtube.com/watch?v=FwFlwiqOodg&t=2736s).
+Updates to platform by Sean Starnes, Code.gov's Backend Engineer.
+- Updating front-end to USWDS. About 80% finished.
+- Updating Federalist deployment scripts.
+- Various component and vulnerability updates.
+- Helpful resource - Snyk/Forrester webinar - [ROI of Open Source Security](https://www.youtube.com/watch?v=FwFlwiqOodg&t=2736s).
 
 ## Current news
-- Updates by Nicole Williams, Code.gov’s Comms Chief.
-   - Federal Source Code Conference April 16, 2020 POSTPONED!
-   - Upcoming Blogs: SSA Hackathon, Success Stories in Open Source in Government
-- ICYMI:
-    - [Crowdsourcing for Code Webinar](https://digital.gov/event/2020/02/11/federal-crowdsourcing-webinar-series-episode-7/).
+Updates by Nicole Williams, Code.gov’s Comms Chief.
+- Federal Source Code Conference April 16, 2020 POSTPONED!
+- Upcoming Blogs: SSA Hackathon, Success Stories in Open Source in Government
+- [Crowdsourcing for Code Webinar](https://digital.gov/event/2020/02/11/federal-crowdsourcing-webinar-series-episode-7/).
 - Upcoming Social Media: Announcements regarding Summit being postponed.
 - Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov).
 
@@ -43,10 +40,10 @@
     - Monthly calls with demos, super geeky conversations on code value and quality.
     - Speak with Peter Meyer (Meyer.Peter@bls.gov) at BLS if interested in joining.
 - Federal Source Code Toolkit
-    - Looking for feedback on current [MD files](https://github.com/GSA/code-gov-open-source-toolkit).
+    - Looking for contributions on current [MD files](https://github.com/GSA/code-gov-open-source-toolkit).
 
 ## Events
-- **Postponed until further notice** - Spring Federal Source Code Summit - For Feds by Feds, hosted at GSA w/ virtual component, 1/2 day in the morning, April 16th, 2020. - Topics based on FSCS study and input from this community - looking for ideas and speakers. [Read more here](https://medium.com/codedotgov/postponed-2020-federal-source-code-summit-e901114170c6)
+Federal Source Code Summit - *Postponed until further notice*
 
 ## Kudos
 - SSA & GSA - blog post for SSA documentation hackathon [available now](https://medium.com/codedotgov/a-hacking-good-time-with-the-social-security-administration-and-code-gov-78a323f3f117)!
