--- a/docs/CoPMeetingMins/Apr2020.md
+++ b/docs/CoPMeetingMins/Apr2020.md
@@ -6,15 +6,10 @@
 
 ## Programming Notes
 1. Next meeting is May 21st (Always 3rd Thursday of the month.). 
-    - Meeting info. sent through Code.gov listserv.
+    - Meeting information sent via Code.gov listserv.
     - Sign up for CODE listserv - CODE-subscribe-request@listserv.gsa.gov. Leave the subject and body blank.
-2. We have a *Slack channel* for more real-time collaboration outside the listserv. Anyone with a .gov and .mil email address can join. Email addition request to Amin Mehr (amin.mehr@gsa.gov).
+2. We have a *Slack channel* for real-time collaboration outside the listserv. Anyone with a .gov and .mil email address can join. Send an email addition request to Amin Mehr (amin.mehr@gsa.gov).
 3. Here is our current [agency liaison list](SupportingDocs/agency_liaisons.md).
-
-## OMB update on FSCP
-- Policy (M-16-21) continues - agencies have to create policy, update acquisition language to capture new custom code, and inventory code and post inventory on root directory.
-- 20% pilot expired in August 2019 and working with OMB on ways to extend in the future. 
-- IDC Update - OMB is no longer requiring agencies to complete the IDC report for M-16-21. Code.gov will work with agencies on metrics to monitor compliance.
 
 ## Updates to Code.gov platform
 - Adding swing resources - 18F engineer, Code It Forward Fellow.
@@ -24,23 +19,21 @@
 
 ## Current news
 By Nicole Williams, Code.gov’s Comms Chief.
-- Federal Source Code Conference April 16, 2020 POSTPONED!
-- Upcoming Blogs: SSA Hackathon, Success Stories in Open Source in Government
+- SSA Hackathon [blog](https://medium.com/codedotgov/a-hacking-good-time-with-the-social-security-administration-and-code-gov-78a323f3f117).
 - [Crowdsourcing for Code Webinar](https://digital.gov/event/2020/02/11/federal-crowdsourcing-webinar-series-episode-7/).
-- Upcoming Social Media: Announcements regarding Summit being postponed.
 - Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov).
 
 ## Current engagements
 - [Federal Source Code Study](https://github.com/GSA/code-gov/tree/master/docs/FederalSourceCodeStudy) is now live!
     - Three year study of agency implementation of the Federal Source Code Policy (FSCP).
-    - Findings show agencies struggle with technology and policy implementation.
-    - Code.gov will have future blog posts and speaking engagements presenting the study.
+    - Findings show agencies struggle with technology and policy implementation do to organizational factors.
+    - Code.gov is planning future blog posts and speaking engagements presenting the study.
 - Software Productivity and Quality Working Group
     - Includes BLS, NASA, NIST, DOD, GSA
     - Monthly calls with demos, super geeky conversations on code value and quality.
     - Send Peter Meyer (Meyer.Peter@bls.gov) an email if interested in joining.
 - Federal Source Code Toolkit
-    - Looking for contributions on the current [documents](https://github.com/GSA/code-gov-open-source-toolkit).
+    - Looking for contributions on current [documents](https://github.com/GSA/code-gov-open-source-toolkit).
 
 ## Events
 Federal Source Code Summit - *Postponed until further notice*
