updates to Apr agenda

--- a/docs/CoPMeetingMins/Apr2020.md
+++ b/docs/CoPMeetingMins/Apr2020.md
@@ -20,6 +20,7 @@
 ## Current news
 By Nicole Williams, Code.gov’s Comms Chief.
 - SSA Hackathon [blog](https://medium.com/codedotgov/a-hacking-good-time-with-the-social-security-administration-and-code-gov-78a323f3f117).
+- Upcoming blog - Meet our new fellow Anna Zhang.
 - [Crowdsourcing for Code Webinar](https://digital.gov/event/2020/02/11/federal-crowdsourcing-webinar-series-episode-7/).
 - Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov).
 
@@ -36,7 +37,7 @@ By Nicole Williams, Code.gov’s Comms Chief.
     - Looking for contributions on current [documents](https://github.com/GSA/code-gov-open-source-toolkit).
 
 ## Events
-Federal Source Code Summit - *Postponed until further notice*
+Federal Source Code Summit - *Postponed to Oct. 8th*
 
 ## Kudos
 - DOE, CFPB, NASA for working with the Code.gov team on new Spotlight Stories.
