--- a/docs/CoPMeetingMins/Apr2020.md
+++ b/docs/CoPMeetingMins/Apr2020.md
@@ -29,10 +29,10 @@ By Nicole Williams, Code.gov’s Comms Chief.
     - Three year study of agency implementation of the Federal Source Code Policy (FSCP).
     - Findings show agencies struggle with technology and policy implementation do to organizational factors.
     - Code.gov is planning future blog posts and speaking engagements presenting the study.
-- Software Productivity and Quality Working Group
-    - Includes BLS, NASA, NIST, DOD, GSA
-    - Monthly calls with demos, super geeky conversations on code value and quality.
-    - Send Peter Meyer (Meyer.Peter@bls.gov) an email if interested in joining.
+- Software Productivity and Quality Working Group (SPSQ) coordinated by OSTP/NITRD
+    - Includes participants from NSF, NIST, DOD/NRL, DOD/ARL, NIH, GSA
+    - Monthly calls often with presentations on gov-funded software engineering research or economics of software
+    - Contact Peter Meyer (Meyer.Peter@bls.gov) if interested in joining.
 - Federal Source Code Toolkit
     - Looking for contributions on current [documents](https://github.com/GSA/code-gov-open-source-toolkit).
 
