updated Apr agenda to meeting minutes

--- a/docs/CoPMeetingMins/Apr2020.md
+++ b/docs/CoPMeetingMins/Apr2020.md
@@ -1,4 +1,4 @@
-# Agenda - 4/16/2020
+# Meeting Minutes - 4/16/2020
 
 ## Welcome
 - Thank you for joining today!
@@ -8,13 +8,14 @@
 1. Next meeting is May 21st (Always 3rd Thursday of the month.). 
     - Meeting information sent via Code.gov listserv.
     - Sign up for CODE listserv - CODE-subscribe-request@listserv.gsa.gov. Leave the subject and body blank.
-2. We have a *Slack channel* for real-time collaboration outside the listserv. Anyone with a .gov and .mil email address can join. Send an email addition request to Amin Mehr (amin.mehr@gsa.gov).
+2. We have the *#code-gov-partners* Slack channel for real-time collaboration. Anyone with a .gov and .mil email address can join. Send an email addition request to Amin Mehr (amin.mehr@gsa.gov).
 3. Here is our current [agency liaison list](SupportingDocs/agency_liaisons.md).
 
 ## Updates to Code.gov platform
 - Adding swing resources - 18F engineer, Code It Forward Fellow.
 - Updating front-end to USWDS. About 80% finished.
 - Various component and vulnerability updates.
+- Updated Development Roadmap is in the works.
 - Future items: Updated metadata schema, M-16-21 compliance metrics, engagement metrics based on agency inventory and GH API.
 
 ## Current news
@@ -29,11 +30,11 @@ By Nicole Williams, Code.gov’s Comms Chief.
     - Three year study of agency implementation of the Federal Source Code Policy (FSCP).
     - Findings show agencies struggle with technology and policy implementation do to organizational factors.
     - Code.gov is planning future blog posts and speaking engagements presenting the study.
-- Software Productivity and Quality Working Group (SPSQ) coordinated by OSTP/NITRD
-    - Includes participants from NSF, NIST, DOD/NRL, DOD/ARL, NIH, GSA
-    - Monthly calls often with presentations on gov-funded software engineering research or economics of software
+- Software Productivity and Quality Working Group (SPSQ) coordinated by OSTP/NITRD.
+    - Includes participants from NSF, NIST, DOD/NRL, DOD/ARL, NIH, GSA.
+    - Monthly calls often with presentations on gov-funded software engineering research or economics of software.
     - Contact Peter Meyer (Meyer.Peter@bls.gov) if interested in joining.
-- Federal Source Code Toolkit
+- Federal Source Code Toolkit.
     - Looking for contributions on current [documents](https://github.com/GSA/code-gov-open-source-toolkit).
 
 ## Events
@@ -45,4 +46,6 @@ Federal Source Code Summit - *Postponed to Oct. 8th*
 - SSA and USDA for participating in GSA customer listening sessions.
 
 ## Demo
-Taylor Yates from NASA
+Taylor Yates (evan.t.yates@nasa.gov) from NASA presented a demo for aggregating agency source code metrics via the GitHub API.
+- Agency GH admins are encouraged to export repo and member lists for creating better metrics around GH code.
+- Code.gov is working on similar solution - Public Engagement Metrics - and plan to have something tangible by the end of the year.
