added link to SPSQ

--- a/docs/CoPMeetingMins/Apr2020.md
+++ b/docs/CoPMeetingMins/Apr2020.md
@@ -30,7 +30,7 @@ By Nicole Williams, Code.gov’s Comms Chief.
     - Three year study of agency implementation of the Federal Source Code Policy (FSCP).
     - Findings show agencies struggle with technology and policy implementation do to organizational factors.
     - Code.gov is planning future blog posts and speaking engagements presenting the study.
-- Software Productivity and Quality Working Group (SPSQ) coordinated by OSTP/NITRD.
+- [Software Productivity and Quality Working Group (SPSQ)](https://www.nitrd.gov/nitrdgroups/index.php?title=SPSQ) coordinated by OSTP/NITRD.
     - Includes participants from NSF, NIST, DOD/NRL, DOD/ARL, NIH, GSA.
     - Monthly calls often with presentations on gov-funded software engineering research or economics of software.
     - Contact Peter Meyer (Meyer.Peter@bls.gov) if interested in joining.
