Adding May agenda

--- a/docs/CoPMeetingMins/May2020.md
+++ b/docs/CoPMeetingMins/May2020.md
@@ -1,21 +1,26 @@
-# Meeting Minutes - 4/16/2020
+# Agenda - 5/21/2020
 
 ## Welcome
 - Thank you for joining today!
 - Purpose: This is a forum to learn from each other about the benefits of sharing and open sourcing software.
 
 ## Programming Notes
-1. Next meeting is May 21st (Always 3rd Thursday of the month.). 
+1. Next meeting is June 18th (Always 3rd Thursday of the month.). 
     - Meeting information sent via Code.gov listserv.
     - Sign up for CODE listserv - CODE-subscribe-request@listserv.gsa.gov. Leave the subject and body blank.
 2. We have the *#code-gov-partners* Slack channel for real-time collaboration. Anyone with a .gov and .mil email address can join. Send an email addition request to Amin Mehr (amin.mehr@gsa.gov).
 3. Here is our current [agency liaison list](SupportingDocs/agency_liaisons.md).
 
-## Updates to Code.gov platform
-- Adding swing resources - 18F engineer, Code It Forward Fellow.
-- Updating front-end to USWDS. About 80% finished.
-- Various component and vulnerability updates.
-- Updated Development Roadmap is in the works.
+## Updates to the Code.gov platform
+- Added a swing resource in May, Brian Hurst an 18F engineer, who helped streamline our deployment process to Federalist and migrated a couple web components to React components easier site management. (Note: Code.gov has web components [listed](https://www.npmjs.com/org/code.gov) on [NPMJS.com](https://www.npmjs.com/).)
+- In June, Anna Zhang, a Coding It Forward Fellow, will join us from Yale University where she is studying Computing and the Arts. She has worked on commercial projects with Fujifilm and Conde Nast. She will be assisting with completion of USWDS integration and an aggregated developer docs site.
+- May front-end release:
+    - Full [release notes](https://github.com/GSA/code-gov-front-end/releases/tag/v1.2.0)
+    - Updated [Development Roadmap](https://code.gov/roadmap).
+    - Updated news articles - [SSA Blog Post](https://medium.com/codedotgov/a-hacking-good-time-with-the-social-security-administration-and-code-gov-78a323f3f117) and [Meet Anna Zhang](https://medium.com/codedotgov/introducing-our-summer-fellow-anna-zhang-455fd792cad8).
+    - Updated logic for visiting repos and good first issue filtering on [Open Tasks](https://code.gov/open-tasks?page=1&size=10).
+    - Various component and vulnerability updates.
+    - Kudos to contributors Brian Hurst & Ryan Wold, and Code.gov team members Sara Cope and Sean Starnes.
 - Future items: Updated metadata schema, M-16-21 compliance metrics, engagement metrics based on agency inventory and GH API.
 
 ## Current news
@@ -36,16 +41,19 @@ By Nicole Williams, Code.gov’s Comms Chief.
     - Contact Peter Meyer (Meyer.Peter@bls.gov) if interested in joining.
 - Federal Source Code Toolkit.
     - Looking for contributions on current [documents](https://github.com/GSA/code-gov-open-source-toolkit).
+- Code.gov to conduct quarterly check-ins with agencies.
+    - Amin will be reaching out to agency liaisons.
+    - Interested in how code is being reused across your agency and across government.
 
 ## Events
-Federal Source Code Summit - *Postponed to Oct. 8th*
+- Federal Source Code Summit - *Postponed to Oct. 8th*.
+- [GitHub Satellite](https://githubsatellite.com/), [Microsoft Build](https://mybuild.microsoft.com/home), [RedHat Virtual Summit](https://www.redhat.com/en/summit) - already occurred by have session videos posted online.
 
 ## Kudos
 - DOE, CFPB, NASA for working with the Code.gov team on new Spotlight Stories.
 - USCIS for moving Tech Talks virtually and hosting Code.gov soon.
-- SSA and USDA for participating in GSA customer listening sessions.
 
 ## Demo
-Taylor Yates (evan.t.yates@nasa.gov) from NASA presented a demo for aggregating agency source code metrics via the GitHub API.
-- Agency GH admins are encouraged to export repo and member lists for creating better metrics around GH code.
-- Code.gov is working on similar solution - Public Engagement Metrics - and plan to have something tangible by the end of the year.
+Sara Cope (sara.cope@gsa.gov) from GSA will be demoing [Digital.gov](https://digital.gov/).
+- What it is, how it is open source, and the platform stack.
+- How folks can contribute.
