A couple more minor edits

--- a/docs/CoPMeetingMins/May2020.md
+++ b/docs/CoPMeetingMins/May2020.md
@@ -12,7 +12,7 @@
 3. Here is our current [agency liaison list](SupportingDocs/agency_liaisons.md).
 
 ## Updates to the Code.gov platform
-- Added a swing resource in May, Brian Hurst an 18F engineer, who helped streamline our deployment process to Federalist and migrated a couple web components to React components easier site management. (Note: Code.gov has web components [listed](https://www.npmjs.com/org/code.gov) on [NPMJS.com](https://www.npmjs.com/).)
+- Added a swing resource in May, Brian Hurst an 18F engineer, who helped streamline our deployment process to Federalist and migrated a couple web components to React components for easier site management. (Note: Code.gov has web components [listed](https://www.npmjs.com/org/code.gov) on [NPMJS.com](https://www.npmjs.com/).)
 - In June, Anna Zhang, a Coding It Forward Fellow, will join us from Yale University where she is studying Computing and the Arts. She has worked on commercial projects with Fujifilm and Conde Nast. She will be assisting with completion of USWDS integration and an aggregated developer docs site.
 - May front-end release:
     - Full [release notes](https://github.com/GSA/code-gov-front-end/releases/tag/v1.2.0)
@@ -25,9 +25,9 @@
 
 ## Current news
 By Nicole Williams, Code.gov’s Comms Chief.
-- SSA Hackathon [blog](https://medium.com/codedotgov/a-hacking-good-time-with-the-social-security-administration-and-code-gov-78a323f3f117).
-- Upcoming blog - Meet our new fellow Anna Zhang.
-- [Crowdsourcing for Code Webinar](https://digital.gov/event/2020/02/11/federal-crowdsourcing-webinar-series-episode-7/).
+- Meet Our New Fellow Anna Zhang [Blog](https://medium.com/codedotgov/introducing-our-summer-fellow-anna-zhang-455fd792cad8).
+- Upcoming blogs: Federal Source Code Study Series, Spotlight Stories, Better Know an Engineer.
+- [Federal Source Code Summit - October 8, 2020](https://digital.gov/event/2020/10/08/federal-source-code-summit-building-coding/).
 - Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov).
 
 ## Current engagements
@@ -54,6 +54,6 @@ By Nicole Williams, Code.gov’s Comms Chief.
 - USCIS for moving Tech Talks virtually and hosting Code.gov soon.
 
 ## Demo
-Sara Cope (sara.cope@gsa.gov) from GSA will be demoing [Digital.gov](https://digital.gov/).
+Sara Cope (sara.cope@gsa.gov and https://github.com/saracope) from GSA will be demoing [Digital.gov](https://digital.gov/) front-end and [repo](https://github.com/GSA/digitalgov.gov/).
 - What it is, how it is open source, and the platform stack.
 - How folks can contribute.
