Update to May and June meeting mins

--- a/docs/CoPMeetingMins/May2020.md
+++ b/docs/CoPMeetingMins/May2020.md
@@ -1,59 +1,69 @@
-# Agenda - 5/21/2020
+# Meeting Minutes - 5/21/2020
 
 ## Welcome
+
 - Thank you for joining today!
 - Purpose: This is a forum to learn from each other about the benefits of sharing and open sourcing software.
 
 ## Programming Notes
-1. Next meeting is June 18th (Always 3rd Thursday of the month.). 
-    - Meeting information sent via Code.gov listserv.
-    - Sign up for CODE listserv - CODE-subscribe-request@listserv.gsa.gov. Leave the subject and body blank.
-2. We have the *#code-gov-partners* Slack channel for real-time collaboration. Anyone with a .gov and .mil email address can join. Send an email addition request to Amin Mehr (amin.mehr@gsa.gov).
+
+1. Next meeting is June 18th (Always 3rd Thursday of the month.).
+   - Meeting information sent via Code.gov listserv.
+   - Sign up for CODE listserv - CODE-subscribe-request@listserv.gsa.gov. Leave the subject and body blank.
+2. We have the _#code-gov-partners_ Slack channel for real-time collaboration. Anyone with a .gov and .mil email address can join. Send an email addition request to Amin Mehr (amin.mehr@gsa.gov).
 3. Here is our current [agency liaison list](SupportingDocs/agency_liaisons.md).
 
 ## Updates to the Code.gov platform
+
 - Added a swing resource in May, Brian Hurst an 18F engineer, who helped streamline our deployment process to Federalist and migrated a couple web components to React components for easier site management. (Note: Code.gov has web components [listed](https://www.npmjs.com/org/code.gov) on [NPMJS.com](https://www.npmjs.com/).)
 - In June, Anna Zhang, a Coding It Forward Fellow, will join us from Yale University where she is studying Computing and the Arts. She has worked on commercial projects with Fujifilm and Conde Nast. She will be assisting with completion of USWDS integration and an aggregated developer docs site.
 - May front-end release:
-    - Full [release notes](https://github.com/GSA/code-gov-front-end/releases/tag/v1.2.0)
-    - Updated [Development Roadmap](https://code.gov/roadmap).
-    - Updated news articles - [SSA Blog Post](https://medium.com/codedotgov/a-hacking-good-time-with-the-social-security-administration-and-code-gov-78a323f3f117) and [Meet Anna Zhang](https://medium.com/codedotgov/introducing-our-summer-fellow-anna-zhang-455fd792cad8).
-    - Updated logic for visiting repos and good first issue filtering on [Open Tasks](https://code.gov/open-tasks?page=1&size=10).
-    - Various component and vulnerability updates.
-    - Kudos to contributors Brian Hurst & Ryan Wold, and Code.gov team members Sara Cope and Sean Starnes.
+  - Full [release notes](https://github.com/GSA/code-gov-front-end/releases/tag/v1.2.0)
+  - Updated [Development Roadmap](https://code.gov/roadmap).
+  - Updated news articles - [SSA Blog Post](https://medium.com/codedotgov/a-hacking-good-time-with-the-social-security-administration-and-code-gov-78a323f3f117) and [Meet Anna Zhang](https://medium.com/codedotgov/introducing-our-summer-fellow-anna-zhang-455fd792cad8).
+  - Updated logic for visiting repos and good first issue filtering on [Open Tasks](https://code.gov/open-tasks?page=1&size=10).
+  - Various component and vulnerability updates.
+  - Kudos to contributors Brian Hurst & Ryan Wold, and Code.gov team members Sara Cope and Sean Starnes.
 - Future items: Updated metadata schema, M-16-21 compliance metrics, engagement metrics based on agency inventory and GH API.
 
 ## Current news
+
 By Nicole Williams, Code.gov’s Comms Chief.
+
 - Meet Our New Fellow Anna Zhang [Blog](https://medium.com/codedotgov/introducing-our-summer-fellow-anna-zhang-455fd792cad8).
 - Upcoming blogs: Federal Source Code Study Series, Spotlight Stories, Better Know an Engineer.
 - [Federal Source Code Summit - October 8, 2020](https://digital.gov/event/2020/10/08/federal-source-code-summit-building-coding/).
 - Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov).
 
 ## Current engagements
+
 - [Federal Source Code Study](https://github.com/GSA/code-gov/tree/master/docs/FederalSourceCodeStudy) is now live!
-    - Three year study of agency implementation of the Federal Source Code Policy (FSCP).
-    - Findings show agencies struggle with technology and policy implementation do to organizational factors.
-    - Code.gov is planning future blog posts and speaking engagements presenting the study.
+  - Three year study of agency implementation of the Federal Source Code Policy (FSCP).
+  - Findings show agencies struggle with technology and policy implementation do to organizational factors.
+  - Code.gov is planning future blog posts and speaking engagements presenting the study.
 - [Software Productivity and Quality Working Group (SPSQ)](https://www.nitrd.gov/nitrdgroups/index.php?title=SPSQ) coordinated by OSTP/NITRD.
-    - Includes participants from NSF, NIST, DOD/NRL, DOD/ARL, NIH, GSA.
-    - Monthly calls often with presentations on gov-funded software engineering research or economics of software.
-    - Contact Peter Meyer (Meyer.Peter@bls.gov) if interested in joining.
+  - Includes participants from NSF, NIST, DOD/NRL, DOD/ARL, NIH, GSA.
+  - Monthly calls often with presentations on gov-funded software engineering research or economics of software.
+  - Contact Peter Meyer (Meyer.Peter@bls.gov) if interested in joining.
 - Federal Source Code Toolkit.
-    - Looking for contributions on current [documents](https://github.com/GSA/code-gov-open-source-toolkit).
+  - Looking for contributions on current [documents](https://github.com/GSA/code-gov-open-source-toolkit).
 - Code.gov to conduct quarterly check-ins with agencies.
-    - Amin will be reaching out to agency liaisons.
-    - Interested in how code is being reused across your agency and across government.
+  - Amin will be reaching out to agency liaisons.
+  - Interested in how code is being reused across your agency and across government.
 
 ## Events
-- Federal Source Code Summit - *Postponed to Oct. 8th*.
+
+- Federal Source Code Summit - _Postponed to Oct. 8th_.
 - [GitHub Satellite](https://githubsatellite.com/), [Microsoft Build](https://mybuild.microsoft.com/home), [RedHat Virtual Summit](https://www.redhat.com/en/summit) - already occurred by have session videos posted online.
 
 ## Kudos
+
 - DOE, CFPB, NASA for working with the Code.gov team on new Spotlight Stories.
 - USCIS for moving Tech Talks virtually and hosting Code.gov soon.
 
 ## Demo
+
 Sara Cope (sara.cope@gsa.gov and https://github.com/saracope) from GSA will be demoing [Digital.gov](https://digital.gov/) front-end and [repo](https://github.com/GSA/digitalgov.gov/).
+
 - What it is, how it is open source, and the platform stack.
 - How folks can contribute.
